--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "interview-coder",
   "version": "1.0.0",
-  "main": "./dist-electron/main.js",
+  "main": "./dist-electron/core/main.js",
   "scripts": {
     "clean": "rimraf dist dist-electron",
     "dev": "vite",
@@ -70,15 +70,16 @@
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
     "@vitejs/plugin-react": "^4.3.3",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "concurrently": "^9.1.0",
     "cross-env": "^7.0.3",
     "electron": "^33.2.0",
     "electron-builder": "^25.1.8",
     "electron-is-dev": "^3.0.1",
-    "postcss": "^8.4.49",
+    "jest": "^30.0.5",
+    "postcss": "^8.5.6",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.6.3",
     "vite": "^5.4.11",
     "vite-plugin-electron": "^0.28.8",
@@ -90,22 +91,29 @@
     "@google/generative-ai": "^0.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.2",
+    "@tailwindcss/typography": "^0.5.16",
+    "aceternity-ui": "^0.2.2",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "diff": "^7.0.0",
     "form-data": "^4.0.1",
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.460.0",
+    "neverthrow": "^8.2.0",
     "react": "^18.3.1",
     "react-code-blocks": "^0.1.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-query": "^3.39.3",
     "react-syntax-highlighter": "^15.6.1",
+    "remeda": "^2.26.1",
     "screenshot-desktop": "^1.15.0",
     "sharp": "^0.33.5",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.6.0",
     "tesseract.js": "^5.0.5",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "zod": "^3.25.76",
+    "zustand": "^5.0.6"
   }
 }
