--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@google/genai": "^0.12.0",
     "@google/generative-ai": "^0.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-toast": "^1.2.2",
     "@tailwindcss/typography": "^0.5.16",
     "aceternity-ui": "^0.2.2",
