--- a/package.json
+++ b/package.json
@@ -92,19 +92,23 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-toast": "^1.2.2",
+    "@react-three/drei": "^10.6.0",
+    "@react-three/fiber": "^9.2.0",
     "@tailwindcss/typography": "^0.5.16",
     "aceternity-ui": "^0.2.2",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "diff": "^7.0.0",
     "form-data": "^4.0.1",
     "framer-motion": "^12.23.6",
+    "glsl-noise": "^0.0.0",
     "lucide-react": "^0.460.0",
     "neverthrow": "^8.2.0",
-    "react": "^18.3.1",
+    "react": "19.1.0",
     "react-code-blocks": "^0.1.6",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.1.0",
     "react-icons": "^5.3.0",
     "react-query": "^3.39.3",
     "react-syntax-highlighter": "^15.6.1",
